--- a/charts/grafana/Chart.yaml
+++ b/charts/grafana/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 name: grafana
 version: 6.16.9
 appVersion: 8.1.5
-kubeVersion: '^1.8.0-0'
+kubeVersion: >= 1.22.0-0
 description: The leading tool for querying and visualizing time series and metrics.
 home: https://grafana.net
 icon: https://raw.githubusercontent.com/grafana/grafana/master/public/img/logo_transparent_400x.png
